--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>라오스 비엔티안(1박) - 방비엥 (2박) C-Pack 빠른견적</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <!-- EmailJS -->
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
     (function(){
@@ -23,24 +22,26 @@
     }
     .two-col {
       display: flex;
-      gap: 32px;
+      flex-direction: row;
+      gap: 36px;
       width: 100%;
-      max-width: 1020px;
+      max-width: 1040px;
       justify-content: center;
+      align-items: flex-start;
     }
     .col {
-      flex: 1 1 0;
-      min-width: 0;
-      max-width: 460px;
+      flex: 0 0 48%;
+      min-width: 390px;
+      max-width: 490px;
       background: #fff;
       border-radius: 18px;
       box-shadow: 0 2px 14px rgba(70, 85, 110, 0.12);
       padding: 24px 22px 16px 22px;
-      margin-bottom: 0;
       box-sizing: border-box;
       display: flex;
       flex-direction: column;
       gap: 14px;
+      margin-bottom: 0;
     }
     .form-title {
       font-size: 1.18rem;
@@ -86,10 +87,13 @@
     .date-input {border:none; background:transparent; font-size:1em; color:#1849b9; flex:1;}
     .date-input:focus {outline:none;}
     .date-icon {font-size:1.2em; color:#14508e; margin-right:9px;}
+    @media (max-width: 1050px) {
+      .two-col { max-width: 100vw; gap: 18px;}
+      .col { min-width: 330px;}
+    }
     @media (max-width: 900px) {
-      .main-wrap { padding: 12px 0;}
       .two-col { flex-direction: column; gap: 0; max-width: 540px;}
-      .col { max-width: 98vw; margin: 0 auto 22px auto;}
+      .col { max-width: 98vw; min-width:0; margin: 0 auto 22px auto;}
     }
     @media (max-width: 600px) {
       html {font-size:14px;}
@@ -182,7 +186,6 @@
     </div>
   </div>
   <script>
-    // 옵션 데이터
     const MAX_PERSON = 8;
     const extraUsdByPerson = {8:95,7:105,6:118,5:137,4:165,3:211,2:305};
     const vangviengOptions = [
@@ -206,7 +209,6 @@
       {name: "4성급 3박", price: 159000},
       {name: "제가 예약할게요", price: 0}
     ];
-    // 인원 선택
     const personToggleGroup = document.getElementById("personToggleGroup");
     let personCount = 2;
     for(let i=2; i<=MAX_PERSON; i++) {
@@ -227,7 +229,6 @@
       }
       personToggleGroup.appendChild(btn);
     }
-    // 가이드팩
     let guideType = "kr";
     let guidePrice = 220;
     document.querySelectorAll("#guideToggleGroup .toggle-btn").forEach(btn=>{
@@ -239,7 +240,6 @@
         updateTotal();
       }
     });
-    // 선택관광(방비엥)
     const vangviengList = document.getElementById("vangviengList");
     let vangviengChecked = Array(vangviengOptions.length).fill(false);
     let vangviengPersons = Array(vangviengOptions.length).fill(0);
@@ -311,7 +311,6 @@
       renderVangviengList();
       updateTotal();
     }
-    // 선택관광(케어팩)
     const careList = document.getElementById("careList");
     let careChecked = Array(careOptions.length).fill(false);
     let carePersons = Array(careOptions.length).fill(0);
@@ -383,7 +382,6 @@
       renderCareList();
       updateTotal();
     }
-    // 숙박팩
     const roomList = document.getElementById("roomList");
     let selectedRoomIdx = null;
     let singleRoomAdd = 0;
@@ -462,7 +460,6 @@
       updateRoomList();
       updateTotal();
     }
-    // 견적 계산
     function updateTotal(){
       let contract = personCount * 60000;
       let baseRoomCnt = Math.ceil(personCount/2);
@@ -482,6 +479,7 @@
     renderCareList();
     updateRoomList();
     updateTotal();
+
     // EmailJS 전송
     function submitEstimate() {
       const travelDate = document.getElementById("travelDate").value.trim();
